<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="wrap_content"
  android:layout_height="wrap_content"
  android:orientation="vertical"
  android:layout_gravity="center"
  android:gravity="center">
  
<TextView android:text="@string/countdown" android:id="@+id/CountdownText" android:layout_width="wrap_content"
   android:layout_height="wrap_content" android:layout_margin="20dip" android:textSize="50dip" android:typeface="monospace"/>
<Button android:text="@string/cancel" android:id="@+id/CancelButton" android:layout_width="wrap_content"
   android:layout_height="wrap_content" android:padding="20dip" android:layout_margin="25dip" android:textSize="20dip"/>
<Button android:text="@string/reset" android:id="@+id/ResetButton" android:layout_width="wrap_content"
   android:layout_height="wrap_content" android:padding="15dip" android:layout_margin="25dip" android:textSize="15dip"/>
  
</LinearLayout>
